tests/ui/typeck/arg_count.stderr
error[RX2003]: this call takes 2 argument(s) but 1 were supplied
 --> $DIR/typeck/arg_count.rx:7:5
  |
7 |     add(1) //~ ERROR RX2003
  |     ^^^^^^ expected 2 argument(s)
